# CocktailBerry-Addons

./: LICENSE  README.md  addon_data.json  addon_data_v2.json  pyproject.toml
addons/: glass_detection.py  recipe_presets.py  start_glass_volume.py
